umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_rdkit_simple_torsion.macrocycle.etkdgv3.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 32
bond_count: 32
sum_formula: C10H21N
graph6: _hCGGC@?K?o?_?O?C?@??C??O??O??O??C??@???C???O???O???O???C???@????C????O????O????O???
